--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@
     box-sizing: border-box;
     font-family: "Lato", sans-serif;
 }
+body{
+    overflow-x: hidden;
+}
 img{
     object-fit: cover;
 }
@@ -20,7 +23,11 @@ body,html{
 .bigScreen{
     display: none;
 }
+.tape{
+    top: 30%;
+    transform: translate(-50%,0);
 
+}
 nav{
     padding-top: 2rem;
 }
@@ -293,8 +300,35 @@ nav{
       font-size: .75rem;
       text-align: center;
   }
-  .italic{
-      border-bottom: 2px solid #000;
+  .sidebar {
+    position: absolute;
+    top: 0;
+    padding: 1rem;
+    width: 100%;
+    height: 100%;
+    background-color: #e9e7e7;
+    display: flex;
+    display: none;
+    justify-content: space-between;
+  }
+
+  .sidebar li{
+     list-style: none;
+     padding: .75rem;
+     
+  }
+  .showSidebar{
+    display: flex;
+  }
+  .close{
+    width: 20px;
+    height: 20px;
+    border: none;
+    background: transparent;
+  }
+  .close img{
+    width: 20px;
+    height: 20px;
   }
   .place{
       padding-bottom: 2.5rem;
@@ -503,12 +537,12 @@ nav{
     position: relative;
 }
 .footerContainer .heading{
-   font-size: 1.5rem;
+   font-size: 1.2rem;
 }
 .footerContent{
     display: flex;
     flex-wrap: wrap;
-    padding-top: 4rem;
+    padding-top: 2rem;
     justify-content: space-between;
 }
 .footer .quickLinks{
@@ -517,7 +551,11 @@ nav{
     justify-content: space-between;
     gap: 1rem;
 }
+.quickLinks a{
+    font-size: .65rem;
+}
 .footer  h4{
+    font-size: .75rem;
     padding: 1rem 0;
 }
 
@@ -581,7 +619,7 @@ button{
     }
 
     nav{
-        padding-top: 2rem;
+        padding-top: 3.25rem;
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -905,8 +943,12 @@ button{
     flex-wrap: wrap;
     gap: 6rem;
 }
+.footer .quickLinks a{
+    font-size: 1rem;
+}
 .footer  h4{
     padding-bottom: 1.5rem;
+    font-size: 1rem;
 }
 
 .quickLinksContainer h1{
