--- a/style.css
+++ b/style.css
@@ -304,8 +304,8 @@ nav{
     position: absolute;
     top: 0;
     padding: 1rem;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     background-color: #e9e7e7;
     display: flex;
     display: none;
