--- a/style.css
+++ b/style.css
@@ -615,7 +615,7 @@ button{
   .slashTwo{
     transform: rotate(-40deg);
   }
-
+  
 @media screen and (max-width:720px){
     h3,h4{
         text-align: center;
@@ -896,11 +896,11 @@ button{
  }
  .rightArrow{
     top: 50%;
-    left: 3.5rem;
+    left: 3.6rem;
  }
  .leftArrow{
     top: 50%;
-    right: 3.5rem;
+    right: 3.6rem;
  }
  .leftArrow img,.rightArrow img{
     width: 50px;
@@ -996,4 +996,21 @@ button{
 button{
     cursor: pointer;
 }
+.small{
+    width: 20px;
+}
+.smallArrow{
+    width: 30px;
+}
+.arrowCon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 70px;
+    height: 60px;
+    background:#e9e7e7;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 0 .75rem;
+  }
 }
